--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="build/app.js"></script>
-  </body>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>The art of Jen Berry</title>
+		<!-- ie8 support for bootstrap -->
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div id="app"></div>
+		<script src="build/app.js"></script>
+	</body>
 </html>
