--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<script src="build/app.js"></script>
+		<script src="app.js"></script>
 	</body>
 </html>
